--- a/ReactOnRails/app/views/static_pages/root.html.erb
+++ b/ReactOnRails/app/views/static_pages/root.html.erb
@@ -1,1 +1,8 @@
 <div id="todo-component"></div>
+
+
+
+
+<script type="text/javascript">
+  React.render(React.createElement(TodoList), document.getElementById("todo-component"));
+</script>
